fix horizontal scroll #2

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -323,10 +323,6 @@ blockquote > ol {
   display: block;
 }
 
-.gatsby-image-wrapper-constrained {
-  display: block;
-}
-
 .heart { 
   color: var(--color-primary);
 }
